# habitat-sim

./: KITCHEN_DEMO_README.md  build_js.sh  launch.json  setup.cfg  setup.py
data/: default.physics_config.json
docs/: conf.py
examples/: demo_runner.py  settings.py
examples/colab_utils/: colab_install.sh
examples/cpp_apps/arrange_recorder/: .gitignore  README.MD  arrange_recorder.sh
examples/tutorials/: lighting_tutorial.py  new_actions.py  physics_benchmarking.py  semantic_id_tutorial.py
habitat_sim/: gfx_replay_utils.py  simulator.py
habitat_sim/agent/: agent.py
habitat_sim/nav/: greedy_geodesic_follower.py
habitat_sim/utils/: __init__.py  compare_profiles.py  gfx_replay_tool.py  merge_profiles.py  profiling_utils.py  sim_profiling_utils.py
habitat_sim/utils/data/: pose_extractor.py
habitat_utils/: __init__.py  viz_utils.py
scripts/: verify_gltf.py
src/: CMakeLists.txt
src/cmake/: dependencies.cmake
src/esp/: CMakeLists.txt
src/esp/scripted/: CMakeLists.txt  CookableEntity.cpp  CookableEntity.h  EntityManager.h  EntityManager.hpp  EntityManagerHelper.cpp  EntityManagerHelper.h  FluidVesselEntity.cpp  FluidVesselEntity.h  KitchenSetup.cpp  KitchenSetup.h  OvenEntity.cpp  OvenEntity.h
src/shaders/: pbr.frag
src/tests/: GfxReplayTest.cpp  IOTest.cpp
src/utils/arrange_recorder/: CMakeLists.txt  arrange_recorder.cpp
tests/: test_agent.py  test_controls.py  test_physics.py  test_sensors.py
tools/: arrange_session_viewer.py  arrange_session_viewer_cart_coord.py  arrange_session_viewer_color_depth_seg.py  arrange_session_viewer_robot.py
(+107 files in other folders)
